...
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Main Field of Study" />

        <CheckBox
            android:id="@+id/stemBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="STEM" />

        <CheckBox
            android:id="@+id/socialScienceBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Social Science" />

        <CheckBox
            android:id="@+id/businessBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Business" />

        <CheckBox
            android:id="@+id/healthBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="Health" />

        <CheckBox
            android:id="@+id/artBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Art" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Tuition and Fees *per year*" />

        <CheckBox
            android:id="@+id/zeroToTwenty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="$0 - $20,000" />

        <CheckBox
            android:id="@+id/twentyToThirty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="$20,001 - $30,000" />

        <CheckBox
            android:id="@+id/thirtyToForty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="$30,001 - $40,000" />

        <CheckBox
            android:id="@+id/fortyPlus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="$40,001+" />

        <TextView
            android:id="@+id/textView14"
...
            android:id="@+id/textView16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Type" />

        <CheckBox
            android:id="@+id/publicBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Public" />

        <CheckBox
            android:id="@+id/privateBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Private" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/nextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="Next"
                android:text="NEXT"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
...
