...
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeJobText">

        <EditText
            android:id="@+id/jobText"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight=".40"
            android:ems="10"
            android:hint="Search"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/jobSearchButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="3dp"
            android:layout_weight="0.25"
            android:foreground="@drawable/ic_search"
            android:foregroundGravity="center"
            android:onClick="searchButton" />

        <Button
            android:id="@+id/filterButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:foreground="@drawable/ic_filter"
            android:foregroundGravity="center" />
    </LinearLayout>
...
