...
                android:layout_height="wrap_content"
                android:layout_marginRight="125sp"
                android:onClick="backButton"
                android:text="BACK" />

            <Button
                android:id="@+id/button5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:onClick="submitButton"
                android:text="SUBMIT" />
        </LinearLayout>
...
